# internal/api/openapi/generated/oapi.gen.go
@@ -34,12 +34,6 @@ const (
 	CreatePatientRequestRaceWHITE      CreatePatientRequestRace = "WHITE"
 )
 
-// Defines values for CreateUserRequestAccountType.
-const (
-	BasicCare    CreateUserRequestAccountType = "basic_care"
-	Professional CreateUserRequestAccountType = "professional"
-)
-
 // Defines values for GetV1PatientsIdLabsParamsExpand.
 const (
 	Full GetV1PatientsIdLabsParamsExpand = "full"
@@ -64,17 +58,11 @@ type CreatePatientRequestRace string
 
 // CreateUserRequest defines model for CreateUserRequest.
 type CreateUserRequest struct {
-	// AccountType Nota (MVP): apenas `basic_care` está disponível no momento.
-	AccountType  CreateUserRequestAccountType `json:"account_type"`
-	BirthDate    openapi_types.Date           `json:"birth_date"`
-	Cpf          string                       `json:"cpf"`
-	FullName     string                       `json:"full_name"`
-	Phone        string                       `json:"phone"`
-	Professional *ProfessionalRequestData     `json:"professional,omitempty"`
+	BirthDate openapi_types.Date `json:"birth_date"`
+	Cpf       string             `json:"cpf"`
+	FullName  string             `json:"full_name"`
+	Phone     string             `json:"phone"`
 }
-
-// CreateUserRequestAccountType Nota (MVP): apenas `basic_care` está disponível no momento.
-type CreateUserRequestAccountType string
 
 // ErrorResponse defines model for ErrorResponse.
 type ErrorResponse struct {
@@ -105,14 +93,6 @@ type PatientCreatedResponse struct {
 
 // PatientsList defines model for PatientsList.
 type PatientsList = []Patient
-
-// ProfessionalRequestData defines model for ProfessionalRequestData.
-type ProfessionalRequestData struct {
-	Kind               string  `json:"kind"`
-	RegistrationIssuer string  `json:"registration_issuer"`
-	RegistrationNumber string  `json:"registration_number"`
-	RegistrationState  *string `json:"registration_state"`
-}
 
 // RootResponse defines model for RootResponse.
 type RootResponse struct {
